trying to create auth verification
